<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:theme="@style/AppToolbar"
            app:layout_scrollFlags="scroll|snap"
            app:menu="@menu/filter"
            app:title="@string/top_filter" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episodes_filter_name_label"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                android:theme="@style/Subtitle1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/episodes_filter_name_hint"
                android:textColorHint="@color/gray1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_divider"
                android:layout_marginTop="@dimen/spacing_medium"
                android:background="@color/gray1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/number_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episodes_filter_number_label"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                android:theme="@style/Subtitle1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:hint="@string/episodes_filter_number_hint"
                android:textColorHint="@color/gray1" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/episodes_filter_apply"
            android:theme="@style/PrimaryButton" />

    </LinearLayout>

</LinearLayout>
