<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            tools:title="Rick Sanchez" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray5">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/characters_details_picture_background_height"
                android:scaleType="centerCrop"
                app:srcCompat="@raw/picture_background" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/photo"
                android:layout_width="@dimen/characters_details_photo_size"
                android:layout_height="@dimen/characters_details_photo_size"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/spacing_large" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/photo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/spacing_small"
                tools:text="Alive" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/status"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:theme="@style/Headline4"
                tools:text="Rick Sanchez" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:theme="@style/Overline"
                tools:text="Human" />

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/species"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/spacing_medium"
                android:paddingTop="@dimen/spacing_medium">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/characters_details_information"
                    android:textColor="@color/gray1"
                    android:textStyle="bold"
                    android:theme="@style/Headline6" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/characters_details_gender"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:theme="@style/Subtitle1" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Male" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_divider"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:background="@color/gray1" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/characters_details_origin"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:theme="@style/Subtitle1" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Earth" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_divider"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:background="@color/gray1" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/characters_details_type"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:theme="@style/Subtitle1" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Unknown" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_divider"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:background="@color/gray1" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/characters_details_location"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:theme="@style/Subtitle1" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Earth" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_divider"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:background="@color/gray1" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/characters_details_episodes"
                    android:textColor="@color/gray1"
                    android:textStyle="bold"
                    android:theme="@style/Headline6" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/episodes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:overScrollMode="never"
                    tools:itemCount="10"
                    tools:listitem="@layout/characters_details_episodes_item" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
